// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> BottomLeft story renders snapshot 1`] = `
<div
  class="tooltip-popover"
  style="position: relative; display: inline-block; margin-top: 12rem;"
>
  <button
    class="clickable-style button button--primary clickable-style--lg clickable-style--primary clickable-style--brand"
    type="button"
  >
    Open Popover
  </button>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-hidden="false"
      class="popover eds-is-active popover--bottom-left"
      data-testid="popover-test"
      role="button"
      tabindex="0"
    >
      <article
        aria-describedby="popover-description-1"
        aria-labelledby="popover-heading-1"
        role="dialog"
      >
        <div
          class="popover__content"
        >
          <header
            class="popover__header"
          >
            <div
              class="popover__header-content"
            >
              <h3
                class="heading heading--size-body-sm"
                id="popover-heading-1"
              >
                Notifications (4)
              </h3>
              <span
                class="popover__header-title-after"
              >
                <button
                  class="clickable-style button button--icon clickable-style--sm clickable-style--icon clickable-style--brand"
                  type="button"
                >
                  Mark All Seen
                </button>
              </span>
            </div>
          </header>
          <div
            class="popover__body"
          >
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
            </ul>
            <header
              class="popover__header"
            >
              <div
                class="popover__header-content"
              >
                <h3
                  class="heading heading--size-body-sm"
                  id="popover-heading-2"
                >
                  Already Seen
                </h3>
              </div>
            </header>
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
            </ul>
          </div>
        </div>
        <div
          class="popover__arrow"
        />
      </article>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`<Popover /> BottomRight story renders snapshot 1`] = `
<div
  class="tooltip-popover"
  style="position: relative; display: inline-block; margin-top: 12rem;"
>
  <button
    class="clickable-style button button--primary clickable-style--lg clickable-style--primary clickable-style--brand"
    type="button"
  >
    Open Popover
  </button>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-hidden="false"
      class="popover eds-is-active popover--bottom-right"
      data-testid="popover-test"
      role="button"
      tabindex="0"
    >
      <article
        aria-describedby="popover-description-1"
        aria-labelledby="popover-heading-1"
        role="dialog"
      >
        <div
          class="popover__content"
        >
          <header
            class="popover__header"
          >
            <div
              class="popover__header-content"
            >
              <h3
                class="heading heading--size-body-sm"
                id="popover-heading-1"
              >
                Notifications (4)
              </h3>
              <span
                class="popover__header-title-after"
              >
                <button
                  class="clickable-style button button--icon clickable-style--sm clickable-style--icon clickable-style--brand"
                  type="button"
                >
                  Mark All Seen
                </button>
              </span>
            </div>
          </header>
          <div
            class="popover__body"
          >
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
            </ul>
            <header
              class="popover__header"
            >
              <div
                class="popover__header-content"
              >
                <h3
                  class="heading heading--size-body-sm"
                  id="popover-heading-2"
                >
                  Already Seen
                </h3>
              </div>
            </header>
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
            </ul>
          </div>
        </div>
        <div
          class="popover__arrow"
        />
      </article>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`<Popover /> Default story renders snapshot 1`] = `
<div
  class="tooltip-popover"
  style="position: relative; display: inline-block; margin-top: 12rem;"
>
  <button
    class="clickable-style button button--primary clickable-style--lg clickable-style--primary clickable-style--brand"
    type="button"
  >
    Open Popover
  </button>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-hidden="false"
      class="popover eds-is-active"
      data-testid="popover-test"
      role="button"
      tabindex="0"
    >
      <article
        aria-describedby="popover-description-1"
        aria-labelledby="popover-heading-1"
        role="dialog"
      >
        <div
          class="popover__content"
        >
          <header
            class="popover__header"
          >
            <div
              class="popover__header-content"
            >
              <h3
                class="heading heading--size-body-sm"
                id="popover-heading-1"
              >
                Notifications (4)
              </h3>
              <span
                class="popover__header-title-after"
              >
                <button
                  class="clickable-style button button--icon clickable-style--sm clickable-style--icon clickable-style--brand"
                  type="button"
                >
                  Mark All Seen
                </button>
              </span>
            </div>
          </header>
          <div
            class="popover__body"
          >
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
            </ul>
            <header
              class="popover__header"
            >
              <div
                class="popover__header-content"
              >
                <h3
                  class="heading heading--size-body-sm"
                  id="popover-heading-2"
                >
                  Already Seen
                </h3>
              </div>
            </header>
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
            </ul>
          </div>
        </div>
        <div
          class="popover__arrow"
        />
      </article>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`<Popover /> TopLeft story renders snapshot 1`] = `
<div
  class="tooltip-popover"
  style="position: relative; display: inline-block; margin-top: 12rem;"
>
  <button
    class="clickable-style button button--primary clickable-style--lg clickable-style--primary clickable-style--brand"
    type="button"
  >
    Open Popover
  </button>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-hidden="false"
      class="popover eds-is-active popover--top-left"
      data-testid="popover-test"
      role="button"
      tabindex="0"
    >
      <article
        aria-describedby="popover-description-1"
        aria-labelledby="popover-heading-1"
        role="dialog"
      >
        <div
          class="popover__content"
        >
          <header
            class="popover__header"
          >
            <div
              class="popover__header-content"
            >
              <h3
                class="heading heading--size-body-sm"
                id="popover-heading-1"
              >
                Notifications (4)
              </h3>
              <span
                class="popover__header-title-after"
              >
                <button
                  class="clickable-style button button--icon clickable-style--sm clickable-style--icon clickable-style--brand"
                  type="button"
                >
                  Mark All Seen
                </button>
              </span>
            </div>
          </header>
          <div
            class="popover__body"
          >
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as read"
                  class="notification-list__button"
                />
              </li>
            </ul>
            <header
              class="popover__header"
            >
              <div
                class="popover__header-content"
              >
                <h3
                  class="heading heading--size-body-sm"
                  id="popover-heading-2"
                >
                  Already Seen
                </h3>
              </div>
            </header>
            <ul
              class="notification-list"
            >
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
              <li
                class="notification-list__item notification-list__is-read"
              >
                <div
                  class="notification-list__content"
                >
                  <div
                    class="notification-list__title"
                  >
                    <a
                      class="notification-list__link"
                      href="#"
                    >
                      <h6
                        class="heading heading--size-body-sm"
                      >
                        English Teacher gave you feedback
                      </h6>
                    </a>
                  </div>
                  now
                   · 
                  Outsiders on Trial: Self Awareness = Trial Brief Outline
                </div>
                <button
                  aria-label="Mark as unread"
                  class="notification-list__button"
                />
              </li>
            </ul>
          </div>
        </div>
        <div
          class="popover__arrow"
        />
      </article>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
